<resources>
    <string name="app_name">PokeApp</string>
    <!--Tela Atualizar Pokemons-->
    <string name="titulo_atualizar_pokemon">Atualizar Pokémons</string>
    <string name="txt_nome">Nome</string>
    <string name="txt_peso">Peso</string>
    <string name="txt_tipo">Tipo</string>
    <string name="txt_especie">Espécie</string>
    <string name="txt_habilidade">Habilidade</string>
    <string name="btn_salvar">Salvar</string>
    <string name="btn_excluir">Excluir</string>
    <!--Tela Exibir Pokémons-->
    <string name="place_busca">Digite o nome do Pokémon</string>
    <string name="btn_busca">Buscar</string>

    <string name="genero">Genero:</string>
    <string name="regiao">Regiao:</string>
    <string name="nome">Nome:</string>
    <string name="idade">Idade:</string>
    <string name="tipo">Tipo de Pokemon Preferido:</string>
    <string name="atualizarbt">Atualizar</string>
    <string name="excluirbt">Excluir</string>
    <string name="atualizartreinadortitulo">Editar dados de Treinador</string>

    <string-array name="especialidades">
        <item>Planta</item>
        <item>Fogo</item>
        <item>Agua</item>
        <item>Inseto</item>
        <item>Normal</item>
        <item>Venenoso</item>
        <item>Eletrico</item>
        <item>Terra</item>
        <item>Lutador</item>
        <item>Psiquico</item>
        <item>Pedra</item>
        <item>Voador</item>
        <item>Fantasma</item>
        <item>Gelo</item>
        <item>Dragao</item>
        <item>Metalico</item>
        <item>Noturno</item>
        <item>Fada</item>
    </string-array>

</resources>